[package]
name = "rust-tz-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.15", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"

